# RUG-NeuralNetworks-LearnMIDI

./: .gitignore  README.md  environment.yml
data-prepping/: Cargo.toml
data-prepping/src/: main.rs  midi.rs  output.rs
data_prepping2/: img2midi.py  midi2img.py  utils2.py
gan_data_prepping/: img2midi.py  midi2img.py
gan_model/: losses.csv  model.ipynb  models.py  plot.py
lstm_data-prepping/: Cargo.toml
lstm_data-prepping/src/: midi.rs  output.rs
lstm_model/: input.py  main.ipynb  main.py  model.py  plots.py
lstm_model/final/: midi-1.h5  midi-16-64-off12-adagrad-2.h5  midi-16-64-off12-adagrad-3.h5  midi-16-64-off12-adagrad-4.h5  midi-16-64-off12-adagrad.h5  midi-16-64-off12.h5  overfitted3.h5  test2.h5  test3.h5  test5.h5  test6.h5
model/: input.py  main.py  midi.py  midi_test.py  model.py
model/final/: midi-16-64-off12-adagrad-5.h5  midi-16-64-off12-adam.h5  midi-16-64-off12piano-adagrad-1.h5  midi-2.h5  midi-3.h5  overfitted2.h5  overfitted4.h5  overfitted5.h5
