[package]
name = "data-prepping"
version = "0.1.0"
authors = ["Robin Kock <robin@kock-hamburg.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ghakuf = "0.5.5"
structopt = "0.3.14"
ignore = "0.4.16"
log = "0.4.8"
pretty_env_logger = "0.4.0"
regex = { version = "1.3.9", default-features = false, features = ["perf", "std"] }
bitvec = "0.17.4"
